# firefly

./: .gitignore  CMakeLists.txt  LICENSE
examples/: CMakeLists.txt
examples/AutoPong/: AutoPongGame.cpp
include/firefly/: firefly.h
include/firefly/content/: ContentProvider.h
include/firefly/game/: Game.h  GameWindow.h
src/: CMakeLists.txt
src/content/: ContentProvider.cpp
src/game/: Game.cpp
